# arkbot-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  main.rs
src/bot/: mod.rs
src/dump/: download.rs  mod.rs  monitor.rs  parse.rs
src/processors/: commercial.rs  debug.rs  empty.rs  impasse.rs  last_edit.rs  mod.rs  namespace_redirect.rs  no_infobox.rs  no_portal.rs
src/publishers/: debug.rs  file.rs  mod.rs  wiki.rs
src/wiki/: mod.rs
systemd/: arkbot.service  arkbot.timer
tests/: version.rs
