[package]
name = "arkbot"
version = "0.4.0-dev"
description = "A Rust rewrite (and complete redesign) of Arkanosis' Wikipedia bot"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/arkbot-rs"
homepage = "https://github.com/Arkanosis/arkbot-rs"
repository = "https://github.com/Arkanosis/arkbot-rs"

readme = "README.md"
license = "ISC"

keywords = ["wikipedia", "bot"]
categories = ["bot"]

edition = "2024"
build = "build.rs"

[dependencies]
bzip2 = "0.6"
chrono = { version = "0.4", features = ["unstable-locales"] }
confy = "1.0"
directories-next = "2.0"
docopt = "1.1"
quick-xml = "0.38"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
vergen-git2 = "1.0"
